@@ -72,12 +72,13 @@ Please submit bug reports to our <a href="http://bitbucket.org/winmerge/winmerge
 
 <h4>General</h4>
 <ul>
-  <li>Add support for very long path and file names (GitHub #87,95)</li>
+  <li>Add support for very long path and file names (GitHub #87,95,99)</li>
   <li>Enable Ctrl+C shortcut key on the file path bar</li>
   <li>Remove support for old version control system (GitHub #96)</li>
   <li>Improve Options &gt; Color &gt; Differences dialog layout (GitHub #89)</li>
   <li>Improve information and formatting in Help &gt; Configuration reporting (GitHub #92)</li>
   <li>Improve visual layout of Open dialog (GitHub #97)</li>
+  <li>Add icon for "New (3 panes)" menu item (GitHub #97)</li>
 </ul>
 
 <h4>File compare</h4>
@@ -462,10 +463,6 @@ WinMerge 2.15.2 is a beta release which mainly adds support for experimental 3-w
     <p>Line filtering is only applied in folder compare when using <i>Full Contents</i>-compare method.</p>
     <p>If you are using any other compare method, line filters are not applied. Files marked different
     in folder compare can get status changed to identical when opening them to file compare.</p>
-  </li>
-  <li>
-    <p><strong>VSS integration cannot add new files to VSS</strong></p>
-    <p>If you need to add a new file, you must add it via VSS client program.</p>
   </li>
   <li>
     <p><strong>Unset WinMerge integration from ClearCase</strong></p>
